[HOPSWORKS-2617] add batch lookup API to retrieve batch of serving vectors from online feature store (#255)

--- a/notebooks/featurestore/hsfs/serving/feature_vector_model_serving.ipynb
+++ b/notebooks/featurestore/hsfs/serving/feature_vector_model_serving.ipynb
@@ -28,7 +28,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>4</td><td>application_1614033055547_0006</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1614033055547_0006/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_1614033055547_0006_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>5</td><td>application_1634566917647_0007</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1634566917647_0007/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1634566917647_0007_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -82,15 +82,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f5f0492ab50>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "store_fg = fs.get_feature_group(name=\"store_fg\", version=1).read()\n",
     "store_fg_meta = fs.create_feature_group(name=\"store_fg\",\n",
@@ -107,15 +99,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f5f04926490>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "exogenous_fg = fs.get_feature_group(name=\"exogenous_fg\", version=1).read()\n",
     "exogenous_fg_meta = fs.create_feature_group(name=\"exogenous_fg\",\n",
@@ -136,17 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7f5f04930150>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sales_fg_meta = fs.get_feature_group(name=\"sales_fg\", version=3)\n",
     "store_fg_meta = fs.get_feature_group(name=\"store_fg\", version=2)\n",
@@ -178,7 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "td_meta = fs.get_training_dataset(\"sales_model\", 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +175,6 @@
     }
    ],
    "source": [
-    "td_meta = fs.get_training_dataset(\"sales_model\", 8)\n",
     "#`init_prepared_statement` method is needed to get serving_keys in case `get_serving_vector` has not beed called yet. This is not necessary for `get_serving_vector` method itself\n",
     "td_meta.init_prepared_statement() \n",
     "td_meta.serving_keys"
@@ -205,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,21 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.0, 0.0, 0.0, 0.0, 0.0, 86.0, 0.0, 0.0, 0.0, 76, 203750, 2.572]\n",
-      "[2136989.4600000004, 178982.89, 178982.89, 178982.89, 2136989.4600000004, 182142.89, 178982.89, 2136989.4600000004, 2136989.4600000004, 78, 202307, 2.548]\n",
-      "[8570247.079999998, 119627.54000000001, 119627.54000000001, 119627.54000000001, 8570247.079999998, 21309.54, 119627.54000000001, 8570247.079999998, 8570247.079999998, 78, 203742, 2.777]\n",
-      "[15824390.549999991, 31183.239999999998, 15091.66, 31183.239999999998, 15824390.549999991, 3801.43, 31183.239999999998, 7525350.19, 15824390.549999991, 78, 205863, 2.74]\n",
-      "[12237331.150000002, 30995.239999999998, 7391.76, 30995.239999999998, 13337377.520000005, 1764.75, 27481.239999999998, 3947290.049999999, 13337377.520000005, 75, 112238, 3.127]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in incoming_data:\n",
     "    serving_vector = td_meta.get_serving_vector({'store': i[0],'date': i[1], 'dept': i[2]})\n",
@@ -255,11 +227,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lets do the same but retrive all this values as batch. \n",
+    "Since we have already intialised prepared statement for single vector in this session we need to re-initialise prepared statements with size of batch we want to retrieve. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'store', 'date', 'dept'}"
+     ]
+    }
+   ],
+   "source": [
+    "td_meta.init_prepared_statement(batch=True) \n",
+    "td_meta.serving_keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "serving_vectors = td_meta.get_serving_vectors({'store': [32,2,20,4,12],\n",
+    "                                               'date':  [\"2010-02-05\", \"2010-02-12\", \"2010-03-05\", \"2010-04-02\", \"2010-05-07\"], \n",
+    "                                               'dept': [47, 92, 11, 52, 27]})"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "serving_vectors"
+   ]
   }
  ],
  "metadata": {
