--- a/notebooks/ml/Maggy/Hopsworks/Tensorflow/maggy-MNIST-tf-dist.ipynb
+++ b/notebooks/ml/Maggy/Hopsworks/Tensorflow/maggy-MNIST-tf-dist.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "---\n",
-    "title: \"Maggy Distributed Training on MNIST with Tensorflow example\"\n",
+    "title: \"Maggy Distributed Training on MNIST Dataset\"\n",
     "date: 2021-05-03\n",
     "type: technical_note\n",
     "draft: false\n",
