--- a/notebooks/ml/Maggy/Hopsworks/Tensorflow/maggy-ablation-titanic.ipynb
+++ b/notebooks/ml/Maggy/Hopsworks/Tensorflow/maggy-ablation-titanic.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Maggy Tensorflow Ablation example\"\n",
+    "title: Maggy Tensorflow Ablation example,\n",
     "date: 2021-05-03\n",
     "type: technical_note\n",
     "draft: false\n",
