--- a/notebooks/ml/Maggy/Spark/maggy-spark-iris.ipynb
+++ b/notebooks/ml/Maggy/Spark/maggy-spark-iris.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "---\n",
-    "title: \"Maggy Distributed Hyper Parameter Optimization with Tensorflow example\"\n",
+    "title: \"Distributed Hyperparameter Optimization on local machine\"\n",
     "date: 2021-05-03\n",
     "type: technical_note\n",
     "draft: false\n",
