--- a/notebooks/ml/Maggy/Hopsworks/Tensorflow/maggy-iris-tf-dist.ipynb
+++ b/notebooks/ml/Maggy/Hopsworks/Tensorflow/maggy-iris-tf-dist.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "---\n",
-    "title: \"Maggy Distributed Training with Tensorflow example\"\n",
+    "title: \"Distributed Training on Iris Dataset\"\n",
     "date: 2021-05-03\n",
     "type: technical_note\n",
     "draft: false\n",
