--- a/notebooks/ml/Maggy/Hopsworks/Tensorflow/maggy-mnist-example.ipynb
+++ b/notebooks/ml/Maggy/Hopsworks/Tensorflow/maggy-mnist-example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "---\n",
-    "title: \"Maggy Distributed Hyper Parameters Optimization example\"\n",
+    "title: \"Distributed Hyperparameter Optimization on MNIST Dataset\"\n",
     "date: 2021-05-03\n",
     "type: technical_note\n",
     "draft: false\n",
