add kafka scope

--- a/notebooks/featurestore/gcp/colab.ipynb
+++ b/notebooks/featurestore/gcp/colab.ipynb
@@ -31,7 +31,7 @@
     "You need to set up a Feature Store API key for authentication.\n",
     "In Hopsworks, click on your username in the top-right corner \n",
     "(1) and select Settings to open the user settings. Select API keys. \n",
-    "(2) Give the key a name and select the job, featurestore, dataset.create and project scopes before \n",
+    "(2) Give the key a name and select the job, featurestore, dataset.create, kafka and project scopes before \n",
     "(3) creating the key. \n",
     "\n",
     "Copy the key into your clipboard for the next step."
