Right enumeration within notebooks regarding Online Feature Store end-to-end

--- a/notebooks/featurestore/hsfs/online_featurestore/0_create_kafka_topic.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/0_create_kafka_topic.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Create a Kafka topic\"\n",
+    "title: \"0. Create a Kafka topic\"\n",
     "date: 2021-04-25\n",
     "type: technical_note\n",
     "draft: false\n",
