--- a/notebooks/featurestore/hsfs/online_featurestore/1_create_feature_groups.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/1_create_feature_groups.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Create empty feature groups for Online Feature Store\"\n",
+    "title: \"1. Create empty feature groups for Online Feature Store\"\n",
     "date: 2021-04-25\n",
     "type: technical_note\n",
     "draft: false\n",
