--- a/notebooks/featurestore/hsfs/online_featurestore/5_online_serving.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/5_online_serving.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Online Feature Serving\"\n",
+    "title: \"5. Online Feature Serving\"\n",
     "date: 2021-04-25\n",
     "type: technical_note\n",
     "draft: false\n",
