--- a/notebooks/featurestore/hsfs/online_featurestore/4_create_training_dataset.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/4_create_training_dataset.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Create training dataset from online feature store enabled feature groups\"\n",
+    "title: \"4. Create training dataset from online feature store enabled feature groups\"\n",
     "date: 2021-04-25\n",
     "type: technical_note\n",
     "draft: false\n",
