added --no-warn-conflicts in order to do it more nice

--- a/notebooks/featurestore/gcp/colab.ipynb
+++ b/notebooks/featurestore/gcp/colab.ipynb
@@ -119,7 +119,7 @@
    ],
    "source": [
     "!pip3 uninstall hsfs -y\n",
-    "!pip3 install hsfs[hive]"
+    "!pip3 install hsfs[hive] --no-warn-conflicts"
    ]
   },
   {
