Add model schema to example notebooks

--- a/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
+++ b/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
@@ -97,9 +97,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>30</td><td>application_1637773802226_0039</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1637773802226_0039/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1637773802226_0039_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
     "def keras_mnist():\n",
     "    \n",
@@ -122,6 +150,8 @@
     "    from hops import tensorboard\n",
     "\n",
     "    import hsml\n",
+    "    from hsml.utils.schema import Schema\n",
+    "    from hsml.utils.model_schema import ModelSchema\n",
     "    from hops import hdfs\n",
     "\n",
     "    batch_size=32\n",
@@ -209,7 +239,12 @@
     "    conn = hsml.connection()\n",
     "    mr = conn.get_model_registry()\n",
     "    \n",
-    "    tf_model = mr.tensorflow.create_model(\"mnist_tf\", metrics=metrics)\n",
+    "    input_schema = Schema([{'type': 'uint8', 'shape': [784], 'description': 'Flattened 28x28 mnist grayscale images'}])\n",
+    "    output_schema = Schema([{'type': 'float32', 'shape': [10], 'description': 'Predictions per image label'}])\n",
+    "    \n",
+    "    tf_model = mr.tensorflow.create_model(\"mnist_tf\", \n",
+    "                                          metrics=metrics,\n",
+    "                                          model_schema=ModelSchema(input_schema=input_schema, output_schema=output_schema))\n",
     "    \n",
     "    tf_model.save(export_path)\n",
     "    \n",
@@ -218,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +262,7 @@
      "text": [
       "Finished Experiment \n",
       "\n",
-      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Experiments/application_1634202611091_0023_3', {'accuracy': 0.71875, 'log': 'Experiments/application_1634202611091_0023_3/output.log'})"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Experiments/application_1637773802226_0039_1', {'accuracy': 0.75, 'log': 'Experiments/application_1637773802226_0039_1/output.log'})"
      ]
     }
    ],
