--- a/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
@@ -124,7 +124,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>33</td><td>application_1634202611091_0031</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1634202611091_0031/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_e06_1634202611091_0031_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>28</td><td>application_1637773802226_0037</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1637773802226_0037/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1637773802226_0037_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -441,7 +441,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9733333333333334"
+      "0.98"
      ]
     }
    ],
@@ -518,11 +518,9 @@
      "output_type": "stream",
      "text": [
       "Connected. Call `.close()` to terminate connection gracefully.\n",
-      "Exporting model irisflowerclassifier with version 1\n",
-      "{\"id\": \"irisflowerclassifier_1\", \"experimentId\": null, \"projectName\": \"demo_ml_meb10000\", \"experimentProjectName\": \"demo_ml_meb10000\", \"name\": \"irisflowerclassifier\", \"signature\": null, \"version\": 1, \"description\": \"A collection of models for irisflowerclassifier\", \"inputExample\": null, \"framework\": \"SKLEARN\", \"metrics\": {\"accuracy\": 0.9733333333333334}, \"trainingDataset\": null, \"environment\": null, \"program\": null}\n",
-      "Polling irisflowerclassifier version 1 for model availability.\n",
-      "Model is now registered.\n",
-      "<hsml.sklearn.model.Model object at 0x7f1164a561d0>"
+      "Exported model irisflowerclassifier with version 1\n",
+      "<hsml.sklearn.model.Model object at 0x7fdcd5bc07f0>\n",
+      "Model export complete: 100%|##########| 6/6 [00:06<00:00,  1.10s/it]                   "
      ]
     }
    ],
@@ -530,11 +528,18 @@
     "MODEL_NAME = \"irisflowerclassifier\"\n",
     "\n",
     "import hsml\n",
+    "from hsml.utils.schema import Schema\n",
+    "from hsml.utils.model_schema import ModelSchema\n",
+    "\n",
+    "input_schema = Schema(x_df)\n",
+    "output_schema = Schema(y_df)\n",
     "\n",
     "conn = hsml.connection()\n",
     "mr = conn.get_model_registry()\n",
     "\n",
-    "tf_model = mr.sklearn.create_model(MODEL_NAME, metrics={'accuracy': acc})\n",
+    "tf_model = mr.sklearn.create_model(MODEL_NAME, \n",
+    "                                   metrics={'accuracy': acc}, \n",
+    "                                   model_schema=ModelSchema(input_schema=input_schema, output_schema=output_schema))\n",
     "\n",
     "tf_model.save(IRIS_FLOWER_RESOURCES_PATH)"
    ]
@@ -551,6 +556,7 @@
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1\n",
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py\n",
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_knn.pkl\n",
+      "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/model_schema.json\n",
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/program.ipynb"
      ]
     }
@@ -629,7 +635,7 @@
      "text": [
       "Model name: irisflowerclassifier\n",
       "Model version: 1\n",
-      "{'accuracy': '0.9733333333333334'}"
+      "{'accuracy': '0.98'}"
      ]
     }
    ],
@@ -686,7 +692,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "irisflowerclassifier"
+      "irisflowerclassifier\n",
+      "mnist"
      ]
     }
    ],
@@ -720,10 +727,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Info: \tid: 1032,\n",
+      "Info: \tid: 1,\n",
       "        model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py,\n",
       "        model_version: 1,\n",
-      "        artifact_version: 0,\n",
+      "        artifact_version: None,\n",
       "        model_server: FLASK,\n",
       "        serving_tool: DEFAULT"
      ]
@@ -761,7 +768,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id: 1032, name: irisflowerclassifier, model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py, model_version: 1, artifact_version: 0, transformer: None, model_server: FLASK, serving_tool: DEFAULT, requested_instances: 1, available_instances: 0, available_transformer_instances: None, predictor_resource_config: {'cores': 1, 'memory': 1024, 'gpus': 0}, creator: Admin Admin, created: 2021-10-15T14:03:50Z, status: Stopped, kafka_topic_dto: <hops.kafka.KafkaTopicDTO object at 0x7f1165197ed0>"
+      "id: 1, name: irisflowerclassifier, model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py, model_name: irisflowerclassifier, model_version: 1, artifact_version: None, transformer: None, model_server: FLASK, serving_tool: DEFAULT, requested_instances: 1, available_instances: 1, available_transformer_instances: None, predictor_resource_config: {'cores': 1, 'memory': 1024, 'gpus': 0}, creator: Admin Admin, created: 2021-11-29T13:21:30Z, status: Running, kafka_topic_dto: <hops.kafka.KafkaTopicDTO object at 0x7fdcd5bc0700>"
      ]
     }
    ],
@@ -794,7 +801,16 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stopping serving with name: irisflowerclassifier...\n",
+      "Serving with name: irisflowerclassifier successfully stopped"
+     ]
+    }
+   ],
    "source": [
     "if serving.get_status(SERVING_NAME) == \"Running\":\n",
     "    serving.stop(SERVING_NAME)\n",
@@ -870,23 +886,23 @@
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
-      "{'predictions': [1]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [0]}\n",
+      "{'predictions': [1]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [1]}\n",
-      "{'predictions': [0]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [1]}\n",
-      "{'predictions': [0]}\n",
-      "{'predictions': [1]}\n",
-      "{'predictions': [2]}"
+      "{'predictions': [0]}"
      ]
     }
    ],
@@ -982,23 +998,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "serving: irisflowerclassifier, version: 1, timestamp: 1634306666891,\n",
+      "timeout.. no more messages to read from topic\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1638541965221,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1634306666970,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1638541965289,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1634306667091,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1638541965393,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1634306667315,\n",
-      "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
-      "predictions: 1, prediction_label:Versicolor\n",
-      "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1634306667413,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1638541965482,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica"
      ]
