--- a/notebooks/ml/end_to_end_pipeline/tensorflow/end_to_end_tensorflow.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/tensorflow/end_to_end_tensorflow.ipynb
@@ -116,7 +116,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>31</td><td>application_1634202611091_0029</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1634202611091_0029/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_e06_1634202611091_0029_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>27</td><td>application_1637773802226_0036</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1637773802226_0036/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1637773802226_0036_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -156,15 +156,15 @@
     "    from hops import tensorboard\n",
     "\n",
     "    import hsml\n",
+    "    from hsml.utils.schema import Schema\n",
+    "    from hsml.utils.model_schema import ModelSchema\n",
     "    from hops import hdfs\n",
     "\n",
     "    import pydoop.hdfs as pydoop\n",
     "    \n",
-    "\n",
     "    batch_size=32\n",
     "    num_classes = 10\n",
     "\n",
-    "    \n",
     "    # Provide path to train and validation datasets\n",
     "    train_filenames = [hdfs.project_path() + \"TourData/mnist/train/train.tfrecords\"]\n",
     "    validation_filenames = [hdfs.project_path() + \"TourData/mnist/validation/validation.tfrecords\"]\n",
@@ -248,7 +248,12 @@
     "    conn = hsml.connection()\n",
     "    mr = conn.get_model_registry()\n",
     "    \n",
-    "    tf_model = mr.tensorflow.create_model(\"mnist_e2e\", metrics=metrics)\n",
+    "    input_schema = Schema([{'type': 'uint8', 'shape': [784], 'description': 'Flattened 28x28 mnist grayscale images'}])\n",
+    "    output_schema = Schema([{'type': 'float32', 'shape': [10], 'description': 'Predictions per image label'}])\n",
+    "    \n",
+    "    tf_model = mr.tensorflow.create_model(\"mnist_e2e\",\n",
+    "                                          metrics=metrics,\n",
+    "                                          model_schema=ModelSchema(input_schema=input_schema, output_schema=output_schema))\n",
     "    \n",
     "    tf_model.save(export_path)   \n",
     "    \n",
@@ -266,7 +271,7 @@
      "text": [
       "Finished Experiment \n",
       "\n",
-      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Experiments/application_1634202611091_0029_1', {'accuracy': 0.65625, 'log': 'Experiments/application_1634202611091_0029_1/output.log'})"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Experiments/application_1637773802226_0036_1', {'accuracy': 0.6875, 'log': 'Experiments/application_1637773802226_0036_1/output.log'})"
      ]
     }
    ],
@@ -346,7 +351,7 @@
      "text": [
       "Model name: mnist_e2e\n",
       "Model version: 1\n",
-      "{'accuracy': '0.65625'}"
+      "{'accuracy': '0.6875'}"
      ]
     }
    ],
@@ -410,6 +415,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "irisflowerclassifier\n",
       "mnist"
      ]
     }
@@ -429,7 +435,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'Stopped'"
+      "'Running'"
      ]
     }
    ],
@@ -470,16 +476,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting serving with name: mnist...\n",
-      "Serving with name: mnist successfully started"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if serving.get_status(SERVING_NAME) == 'Stopped':\n",
     "    serving.start(SERVING_NAME)"
@@ -523,16 +520,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': [[0.0273139291, 0.111399874, 0.281308353, 0.0295493305, 0.0813421607, 0.00753608672, 0.192521051, 0.0744408295, 0.126423225, 0.0681650788]]}\n",
-      "{'predictions': [[0.046804741, 0.0864843428, 0.172663853, 0.0273131207, 0.0768367052, 0.0122773033, 0.24159646, 0.075423032, 0.183740854, 0.0768596]]}\n",
-      "{'predictions': [[0.018160874, 0.0885663927, 0.144589469, 0.0405702591, 0.125112206, 0.00655314745, 0.24432461, 0.112010017, 0.141238958, 0.0788740516]]}\n",
-      "{'predictions': [[0.0218341798, 0.0664624125, 0.275945, 0.0215178039, 0.0588449687, 0.00632566586, 0.341116309, 0.0699204206, 0.0884763151, 0.0495568551]]}\n",
-      "{'predictions': [[0.0240937341, 0.293608069, 0.179836228, 0.0253404714, 0.0902874246, 0.0143992659, 0.127755135, 0.0471641943, 0.0974252224, 0.100090183]]}\n",
-      "{'predictions': [[0.0268846527, 0.113879912, 0.146975368, 0.0446644798, 0.159491077, 0.0173089989, 0.225441456, 0.100019604, 0.0599906892, 0.105343819]]}\n",
-      "{'predictions': [[0.0287551265, 0.0808676, 0.235117212, 0.0310515836, 0.125808686, 0.015495427, 0.216872245, 0.0925265923, 0.0861695483, 0.087336]]}\n",
-      "{'predictions': [[0.0285533797, 0.18375437, 0.22159797, 0.0144990329, 0.197305664, 0.0149491709, 0.141593501, 0.0663809851, 0.0770437717, 0.0543221384]]}\n",
-      "{'predictions': [[0.0381118394, 0.128270537, 0.223592564, 0.0225842223, 0.0731007233, 0.00682865316, 0.186056048, 0.0436870158, 0.204710439, 0.0730580091]]}\n",
-      "{'predictions': [[0.0351260155, 0.16973035, 0.113904916, 0.0256955493, 0.0990088135, 0.0124071669, 0.281484812, 0.088683635, 0.118603751, 0.055355]]}"
+      "{'predictions': [[0.0, 0.0, 4.44728275e-32, 0.0, 1.47784481e-34, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 2.99186795e-22, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}"
      ]
     }
    ],
@@ -540,7 +537,7 @@
     "import json\n",
     "for i in range(10):\n",
     "    data = {\n",
-    "                \"signature_name\": \"serving_default\", \"instances\": [np.random.rand(NUM_FEATURES).tolist()]\n",
+    "                \"signature_name\": \"serving_default\", \"instances\": [np.random.randint(0, high=256, size=NUM_FEATURES, dtype=np.uint8).tolist()]\n",
     "            }\n",
     "    response = serving.make_inference_request(SERVING_NAME, data)\n",
     "    print(response)"
@@ -615,21 +612,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "serving: mnist, version: 1, timestamp: 1634303666855,\n",
+      "timeout.. no more messages to read from topic\n",
+      "serving: mnist, version: 1, timestamp: 1638541438680,\n",
       "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0351260155, 0.16973035, 0.113904916, 0.0256955493, 0.0990088135, 0.0124071669, 0.281484812, 0.088683635, 0.118603751, 0.055355]\n",
+      "predictions: [0.0, 0.0, 4.44728275e-32, 0.0, 1.47784481e-34, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
       "\n",
-      "timeout.. no more messages to read from topic\n",
-      "timeout.. no more messages to read from topic\n",
-      "timeout.. no more messages to read from topic\n",
-      "timeout.. no more messages to read from topic"
+      "serving: mnist, version: 1, timestamp: 1638541438755,\n",
+      "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
+      "predictions: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
+      "\n",
+      "serving: mnist, version: 1, timestamp: 1638541438834,\n",
+      "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
+      "predictions: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
+      "\n",
+      "serving: mnist, version: 1, timestamp: 1638541438903,\n",
+      "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
+      "predictions: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
+      "\n",
+      "serving: mnist, version: 1, timestamp: 1638541438973,\n",
+      "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
+      "predictions: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
+      "\n",
+      "serving: mnist, version: 1, timestamp: 1638541439055,\n",
+      "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
+      "predictions: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
+      "\n",
+      "serving: mnist, version: 1, timestamp: 1638541439146,\n",
+      "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
+      "predictions: [0.0, 0.0, 0.0, 0.0, 2.99186795e-22, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
+      "\n",
+      "serving: mnist, version: 1, timestamp: 1638541439227,\n",
+      "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
+      "predictions: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
+      "\n",
+      "serving: mnist, version: 1, timestamp: 1638541439300,\n",
+      "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
+      "predictions: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]"
      ]
     }
    ],
@@ -664,13 +689,6 @@
     "    else:\n",
     "        print(\"timeout.. no more messages to read from topic\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
