Fix image path for benchmark notebook

--- a/notebooks/ml/Benchmarks/benchmark.ipynb
+++ b/notebooks/ml/Benchmarks/benchmark.ipynb
@@ -28,7 +28,7 @@
     "</a></h1> \n",
     "</p>\n",
     "\n",
-    "![hops.png](../../../images/hops.png)\n",
+    "![hops.png](../images/hops.png)\n",
     "\n",
     "## The `hops` python module\n",
     "\n",
