Fix path to Experiments.gif

--- a/notebooks/ml/Benchmarks/benchmark.ipynb
+++ b/notebooks/ml/Benchmarks/benchmark.ipynb
@@ -89,7 +89,7 @@
     "As demonstrated in the gif it provides general information about the experiment and the resulting metric. Experiments can be visualized meanwhile or after training in a TensorBoard.\n",
     "<br>\n",
     "<br>\n",
-    "![Image7-Monitor.png](../../../images/experiments.gif)"
+    "![experiments.gif](../images/experiments.gif)"
    ]
   },
   {
