Do steps from 0 to 2 in /featurestore/hsfs/basics/

--- a/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Feature Engineering/Ingestion\"\n",
+    "title: \"0. Feature Engineering/Ingestion\"\n",
     "date: 2021-02-24\n",
     "type: technical_note\n",
     "draft: false\n",
