--- a/notebooks/featurestore/hsfs/basics/feature_exploration.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_exploration.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Feature Exploration\"\n",
+    "title: \"1. Feature Exploration\"\n",
     "date: 2021-02-24\n",
     "type: technical_note\n",
     "draft: false\n",
