change word performance to right

--- a/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
@@ -293,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When creating a feature group we can also specify a `partition key`. Partition keys help organize the feature data on the file system and improve perfomances when reading the feature group data. As for the `primary key`, also `partition key` can be a composite one."
+    "When creating a feature group we can also specify a `partition key`. Partition keys help organize the feature data on the file system and improve performances when reading the feature group data. As for the `primary key`, also `partition key` can be a composite one."
    ]
   },
   {
